# Kattis

./: .gitignore  Acm.cpp  CMakeLists.txt  Conformity.cpp  Hardware.cpp  MockPE4.cpp  OddManOut.cpp  Official-MockPE4.cpp  Putovanje.cpp  SSSP1.cpp  ToiletSeats.cpp  a.out  baloni.4.in  baloni.cpp  bard  bard.cpp  bela.cpp  chess.cpp  chess.in  coloringSocks.3.in  coloringSocks.4.in  coloringSocks.cpp  grid.4.in  grid.cpp  grid2.cpp  integerList.cpp  karte.cpp  mockpe4.1.in  mockpe4.2.in  mockpe4.3.in  reachableroads-xiaolin.cpp  running-mom.cpp  toilet  where-is-my-internet.cpp
