cmake_minimum_required(VERSION 3.9)
project(kattis)

set(CMAKE_CXX_STANDARD 11)

add_executable(kattis main.cpp)
add_executable(integerList integerList.cpp)
add_executable(OddManOut OddManOut.cpp)
add_executable(bard bard.cpp)
add_executable(Hardware Hardware.cpp)
add_executable(SSSP1 SSSP1.cpp)
add_executable(lost_in_trans lost_in_trans.cpp)